<resources>
    <string name="app_name">GoRacing</string>
    <string name="goracing">GoRacing</string>
    <string name="tido">TODO</string>
    <string name="start_new_game">Start new game</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="exit">Exit</string>
    <string name="tydo">TODO</string>
    <string name="red">RED</string>
    <string name="tado">TODO</string>
    <string name="_00">00</string>
    <string name="Start">Start</string>
    <string name="start">Start</string>
    <string name="todo">todo</string>
</resources>