<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="60dp"
        android:layout_height="83dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_ferrari"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="220dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goracing"
        android:textColor="@color/white"
        android:textSize="48sp"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/btn_startgame"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/yellow"
        android:onClick="startGameAction"
        android:text="@string/start_new_game"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/yellow"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="399dp" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/yellow"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="468dp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/red"
        android:onClick="closeAction"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="547dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>