<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".GameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:src="@drawable/road"
        tools:layout_editor_absoluteY="184dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/iv_usercar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_sedan_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="26dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sport_car"
        android:id="@+id/iv_pccar"
        tools:ignore="ContentDescription,MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="459dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/traffic_light"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="391dp"
        tools:layout_editor_absoluteY="72dp" />

    <ImageView
        android:layout_width="141dp"
        android:layout_height="107dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        tools:ignore="HardcodedText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="455dp"
        android:src="@drawable/finish"
        android:id="@+id/iv_finish"
        tools:layout_editor_absoluteX="974dp"
        tools:layout_editor_absoluteY="184dp"
        tools:ignore="HardcodedText,MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:textAlignment="center"
        android:textSize="50sp"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="423dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_semafore"
        android:text="@string/_00"
        android:textAlignment="center"
        android:textSize="50sp"
        tools:ignore="HardcodedText,MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="72dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/red"
        android:text="@string/start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_button"
        android:backgroundTint="@color/yellow"
        android:text="@string/start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="657dp" />

</androidx.constraintlayout.widget.ConstraintLayout>